--- a/playlist.html
+++ b/playlist.html
@@ -1,48 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Exercise 1</title>
-    <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="playlist.css">
-  </head>
-  <body>
-    <div class="container">
-      <header>
-        <nav>
-          <ul class="nav nav-tabs">
-            <li class="active"><a href="#">Tab 1</a></li>
-            <li><a href="#">Tab 2</a></li>
-            <li><a href="#">Tab 3</a></li>
-          </ul>
-        </nav>
-      </header>
+<head>
+  <title>Exercise 1</title>
+  <!-- Bootstrap core CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="playlist.css">
+</head>
+<body>
+  <div class="container">
+    <header>
+      <nav>
+        <ul class="nav nav-tabs">
+          <li class="top-bar-button songs">
+            <div class="top-bar-button-icon">
+              <span class="glyphicon glyphicon-music"></span>
+              <span>Music</span>
+            </div>
+          </li>
+          <li id="playlist-tab" class="top-bar-button active">
+            <div class="top-bar-button-icon">
+              <span class="glyphicon glyphicon-th-list"></span>
+              <span>Playlists</span>
+            </div>
+          </li>
+          <li id="search-tab" class="top-bar-button">
+            <div class="top-bar-button-icon">
+              <span class="glyphicon glyphicon-search"></span>
+              <span>Search</span>
+            </div>
+          </li>
+        </ul>
+      </nav>
+    </header>
 
-      <section class="Playlists">
-        <div class="row">
-          <div class="col-lg-6">
-            <h4>Subheading</h4>
-            <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+    <section class="playlists active">
+      <div class="row">
+        <div class="col-lg-6">
+          <h4>Subheading</h4>
+          <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
 
-            <h4>Subheading</h4>
-            <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
+          <h4>Subheading</h4>
+          <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
 
-            <h4>Subheading</h4>
-            <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
-          </div>
-
-          <div class="col-lg-6">
-            <h4>Subheading</h4>
-            <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
-
-            <h4>Subheading</h4>
-            <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
-
-            <h4>Subheading</h4>
-            <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
-          </div>
+          <h4>Subheading</h4>
+          <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
         </div>
-      </section>
-    </div>
-  </body>
+
+        <div class="col-lg-6">
+          <h4>Subheading</h4>
+          <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+
+          <h4>Subheading</h4>
+          <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
+
+          <h4>Subheading</h4>
+          <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+        </div>
+      </div>
+    </section>
+  </div>
+</body>
 </html>
