Added colors and meta tag for correct device size

--- a/playlist.html
+++ b/playlist.html
@@ -5,11 +5,12 @@
   <!-- Bootstrap core CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="playlist.css">
+  <meta name="viewport" content="width=device-width, height=device-height">
 </head>
 <body>
   <div class="container">
     <header>
-      <nav>
+      <nav class="top-bar">
         <ul class="nav nav-tabs">
           <li class="top-bar-button songs">
             <div class="top-bar-button-icon">
