Separate color for glyph and text in icon

--- a/playlist.html
+++ b/playlist.html
@@ -14,20 +14,20 @@
         <ul class="nav nav-tabs">
           <li class="top-bar-button songs">
             <div class="top-bar-button-icon">
-              <span class="glyphicon glyphicon-music"></span>
-              <span>Music</span>
+              <span class="top-bar-button-icon-glyph glyphicon glyphicon-music"></span>
+              <span class="top-bar-button-icon-text">Music</span>
             </div>
           </li>
           <li id="playlist-tab" class="top-bar-button active">
             <div class="top-bar-button-icon">
-              <span class="glyphicon glyphicon-th-list"></span>
-              <span>Playlists</span>
+              <span class="top-bar-button-icon-glyph glyphicon glyphicon-th-list"></span>
+              <span class="top-bar-button-icon-text">Playlists</span>
             </div>
           </li>
           <li id="search-tab" class="top-bar-button">
             <div class="top-bar-button-icon">
-              <span class="glyphicon glyphicon-search"></span>
-              <span>Search</span>
+              <span class="top-bar-button-icon-glyph glyphicon glyphicon-search"></span>
+              <span class="top-bar-button-icon-text">Search</span>
             </div>
           </li>
         </ul>
