Remove unused id attributes

--- a/playlist.html
+++ b/playlist.html
@@ -12,19 +12,19 @@
     <header>
       <nav class="top-bar">
         <ul class="nav nav-tabs">
-          <li class="top-bar-button songs">
+          <li class="top-bar-button">
             <div class="top-bar-button-icon">
               <span class="top-bar-button-icon-glyph glyphicon glyphicon-music"></span>
               <span class="top-bar-button-icon-text">Music</span>
             </div>
           </li>
-          <li id="playlist-tab" class="top-bar-button active">
+          <li class="top-bar-button active">
             <div class="top-bar-button-icon">
               <span class="top-bar-button-icon-glyph glyphicon glyphicon-th-list"></span>
               <span class="top-bar-button-icon-text">Playlists</span>
             </div>
           </li>
-          <li id="search-tab" class="top-bar-button">
+          <li class="top-bar-button">
             <div class="top-bar-button-icon">
               <span class="top-bar-button-icon-glyph glyphicon glyphicon-search"></span>
               <span class="top-bar-button-icon-text">Search</span>
