Fixed icon glyph and text size and margins

--- a/playlist.html
+++ b/playlist.html
@@ -15,7 +15,7 @@
           <li class="top-bar-button">
             <div class="top-bar-button-icon">
               <span class="top-bar-button-icon-glyph glyphicon glyphicon-music"></span>
-              <span class="top-bar-button-icon-text">Music</span>
+              <span class="top-bar-button-icon-text">Library</span>
             </div>
           </li>
           <li class="top-bar-button active">
