Added playlist button

--- a/playlist.html
+++ b/playlist.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, height=device-height">
 </head>
 <body>
-  <div class="container">
+  <div>
     <header>
       <nav class="top-bar">
         <ul>
@@ -28,31 +28,23 @@
       </nav>
     </header>
 
-    <section class="playlists active">
-      <div class="row">
-        <div class="col-lg-6">
-          <h4>Subheading</h4>
-          <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+    <div class="playlists active">
+      <button id="new-playlist-button" class="playlists-item">
+        <span class="glyphicon glyphicon-plus"></span>
+        <span>Playlist</span>
+      </button>
+      <ul>
+        <li class="playlists-item playlist">90's Mega Mix</li>
+        <li class="playlists-item playlist">Smooth Jazz</li>
+        <li class="playlists-item playlist">Electronic</li>
+        <li class="playlists-item playlist">Chill</li>
+        <li class="playlists-item playlist">Studying</li>
+        <li class="playlists-item playlist">2000's Mix</li>
+        <li class="playlists-item playlist">Favs</li>
+        <li class="playlists-item playlist">Relaxing Poolside</li>
 
-          <h4>Subheading</h4>
-          <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
-
-          <h4>Subheading</h4>
-          <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
-        </div>
-
-        <div class="col-lg-6">
-          <h4>Subheading</h4>
-          <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
-
-          <h4>Subheading</h4>
-          <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
-
-          <h4>Subheading</h4>
-          <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
-        </div>
-      </div>
-    </section>
+      </ul>
+    </div>
   </div>
 </body>
 </html>
