Playlist list WIP

--- a/playlist.html
+++ b/playlist.html
@@ -28,20 +28,20 @@
       </nav>
     </header>
 
-    <div class="playlists active">
-      <button id="new-playlist-button" class="playlists-item">
+    <div class="playlist-view active">
+      <button id="new-playlist-button">
         <span class="glyphicon glyphicon-plus"></span>
         <span>Playlist</span>
       </button>
-      <ul>
-        <li class="playlists-item playlist">90's Mega Mix</li>
-        <li class="playlists-item playlist">Smooth Jazz</li>
-        <li class="playlists-item playlist">Electronic</li>
-        <li class="playlists-item playlist">Chill</li>
-        <li class="playlists-item playlist">Studying</li>
-        <li class="playlists-item playlist">2000's Mix</li>
-        <li class="playlists-item playlist">Favs</li>
-        <li class="playlists-item playlist">Relaxing Poolside</li>
+      <ul id="playlist-list">
+        <li class="playlist">90's Mega Mix</li>
+        <li class="playlist">Smooth Jazz</li>
+        <li class="playlist">Electronic</li>
+        <li class="playlist">Chill</li>
+        <li class="playlist">Studying</li>
+        <li class="playlist">2000's Mix</li>
+        <li class="playlist">Favs</li>
+        <li class="playlist">Relaxing Poolside</li>
 
       </ul>
     </div>
