Added playlist item prototype

--- a/playlist.html
+++ b/playlist.html
@@ -34,7 +34,11 @@
         <span>Playlist</span>
       </button>
       <ul id="playlist-list">
-        <li class="playlist">90's Mega Mix</li>
+        <li class="playlist">
+          <div class="playlist-icon"></div>
+          <span class="playlist-name">90's Mega Mix</span>
+          <span class="playlist-expand-button glyphicon glyphicon-chevron-right"></span>
+        </li>
         <li class="playlist">Smooth Jazz</li>
         <li class="playlist">Electronic</li>
         <li class="playlist">Chill</li>
