Finished populating playlist list

--- a/playlist.html
+++ b/playlist.html
@@ -39,14 +39,41 @@
           <span class="playlist-name">90's Mega Mix</span>
           <span class="playlist-expand-button glyphicon glyphicon-chevron-right"></span>
         </li>
-        <li class="playlist">Smooth Jazz</li>
-        <li class="playlist">Electronic</li>
-        <li class="playlist">Chill</li>
-        <li class="playlist">Studying</li>
-        <li class="playlist">2000's Mix</li>
-        <li class="playlist">Favs</li>
-        <li class="playlist">Relaxing Poolside</li>
-
+        <li class="playlist">
+          <div class="playlist-icon"></div>
+          <span class="playlist-name">Smooth Jazz</span>
+          <span class="playlist-expand-button glyphicon glyphicon-chevron-right"></span>
+        </li>
+        <li class="playlist">
+          <div class="playlist-icon"></div>
+          <span class="playlist-name">Electronic</span>
+          <span class="playlist-expand-button glyphicon glyphicon-chevron-right"></span>
+        </li>
+        <li class="playlist">
+          <div class="playlist-icon"></div>
+          <span class="playlist-name">Chill</span>
+          <span class="playlist-expand-button glyphicon glyphicon-chevron-right"></span>
+        </li>
+        <li class="playlist">
+          <div class="playlist-icon"></div>
+          <span class="playlist-name">Studying</span>
+          <span class="playlist-expand-button glyphicon glyphicon-chevron-right"></span>
+        </li>
+        <li class="playlist">
+          <div class="playlist-icon"></div>
+          <span class="playlist-name">2000's Mix</span>
+          <span class="playlist-expand-button glyphicon glyphicon-chevron-right"></span>
+        </li>
+        <li class="playlist">
+          <div class="playlist-icon"></div>
+          <span class="playlist-name">Favs</span>
+          <span class="playlist-expand-button glyphicon glyphicon-chevron-right"></span>
+        </li>
+        <li class="playlist">
+          <div class="playlist-icon"></div>
+          <span class="playlist-name">Relaxing Poolside</span>
+          <span class="playlist-expand-button glyphicon glyphicon-chevron-right"></span>
+        </li>
       </ul>
     </div>
   </div>
