Make top-bar unscrolling while the playlist list scrolling

--- a/playlist.html
+++ b/playlist.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div>
-    <header>
+    <header id="top-bar-header">
       <nav class="top-bar">
         <ul>
           <li class="top-bar-button">
@@ -28,7 +28,7 @@
       </nav>
     </header>
 
-    <div class="playlist-view active">
+    <div id="playlist-view" class="active">
       <button id="new-playlist-button">
         <span class="glyphicon glyphicon-plus"></span>
         <span>Playlist</span>
