working on redraw function

--- a/playlist.html
+++ b/playlist.html
@@ -11,7 +11,7 @@
   <div>
     <header id="top-bar-header">
       <nav class="top-bar">
-        <ul>
+        <ul id='top-bar-button-list'>
           <li id='library-button' class="top-bar-button">
             <span class="top-bar-button-icon-glyph glyphicon glyphicon-music"></span>
             <span class="top-bar-button-icon-text">Library</span>
@@ -28,12 +28,12 @@
       </nav>
     </header>
 
-    <div id="content-view" class="active">
+    <div id="content-view">
       <button id="new-playlist-button">
         <span class="glyphicon glyphicon-plus"></span>
         <span>Playlist</span>
       </button>
-      <ul id="playlist-list">
+      <ul class="music-item-list">
         <li class="playlist">
           <div class="playlist-icon"></div>
           <span class="playlist-name">90's Mega Mix</span>
