Added create purple button function

--- a/playlist.html
+++ b/playlist.html
@@ -29,7 +29,7 @@
     </header>
 
     <div id="content-view">
-      <button id="new-playlist-button">
+      <button id="new-playlist-button" class='purple-button'>
         <span class="glyphicon glyphicon-plus"></span>
         <span>Playlist</span>
       </button>
