Working on function to populate playlist list

--- a/playlist.html
+++ b/playlist.html
@@ -33,45 +33,45 @@
         <span class="glyphicon glyphicon-plus"></span>
         <span>Playlist</span>
       </button>
-      <ul class="music-item-list">
-        <li class="playlist">
-          <div class="playlist-icon"></div>
-          <span class="playlist-name">90's Mega Mix</span>
+      <ul id="playlist-list" class="music-item-list">
+        <li class="music-item">
+          <div class="music-cover-thumbnail"></div>
+          <span class="music-title">90's Mega Mix</span>
           <span class="playlist-expand-button glyphicon glyphicon-chevron-right"></span>
         </li>
-        <li class="playlist">
-          <div class="playlist-icon"></div>
-          <span class="playlist-name">Smooth Jazz</span>
+        <li class="music-item">
+          <div class="music-cover-thumbnail"></div>
+          <span class="music-title">Smooth Jazz</span>
           <span class="playlist-expand-button glyphicon glyphicon-chevron-right"></span>
         </li>
-        <li class="playlist">
-          <div class="playlist-icon"></div>
-          <span class="playlist-name">Electronic</span>
+        <li class="music-item">
+          <div class="music-cover-thumbnail"></div>
+          <span class="music-title">Electronic</span>
           <span class="playlist-expand-button glyphicon glyphicon-chevron-right"></span>
         </li>
-        <li class="playlist">
-          <div class="playlist-icon"></div>
-          <span class="playlist-name">Chill</span>
+        <li class="music-item">
+          <div class="music-cover-thumbnail"></div>
+          <span class="music-title">Chill</span>
           <span class="playlist-expand-button glyphicon glyphicon-chevron-right"></span>
         </li>
-        <li class="playlist">
-          <div class="playlist-icon"></div>
-          <span class="playlist-name">Studying</span>
+        <li class="music-item">
+          <div class="music-cover-thumbnail"></div>
+          <span class="music-title">Studying</span>
           <span class="playlist-expand-button glyphicon glyphicon-chevron-right"></span>
         </li>
-        <li class="playlist">
-          <div class="playlist-icon"></div>
-          <span class="playlist-name">2000's Mix</span>
+        <li class="music-item">
+          <div class="music-cover-thumbnail"></div>
+          <span class="music-title">2000's Mix</span>
           <span class="playlist-expand-button glyphicon glyphicon-chevron-right"></span>
         </li>
-        <li class="playlist">
-          <div class="playlist-icon"></div>
-          <span class="playlist-name">Favs</span>
+        <li class="music-item">
+          <div class="music-cover-thumbnail"></div>
+          <span class="music-title">Favs</span>
           <span class="playlist-expand-button glyphicon glyphicon-chevron-right"></span>
         </li>
-        <li class="playlist">
-          <div class="playlist-icon"></div>
-          <span class="playlist-name">Relaxing Poolside</span>
+        <li class="music-item">
+          <div class="music-cover-thumbnail"></div>
+          <span class="music-title">Relaxing Poolside</span>
           <span class="playlist-expand-button glyphicon glyphicon-chevron-right"></span>
         </li>
       </ul>
