Fixed expand button not showing when using javascript

--- a/playlist.html
+++ b/playlist.html
@@ -8,7 +8,6 @@
   <meta name="viewport" content="width=device-width, height=device-height">
 </head>
 <body>
-  <div>
     <header id="top-bar-header">
       <nav class="top-bar">
         <ul id='top-bar-button-list'>
@@ -37,46 +36,45 @@
         <li class="music-item">
           <div class="music-cover-thumbnail"></div>
           <span class="music-title">90's Mega Mix</span>
-          <span class="playlist-expand-button glyphicon glyphicon-chevron-right"></span>
+          <span class="music-item-button glyphicon glyphicon-chevron-right"></span>
         </li>
         <li class="music-item">
           <div class="music-cover-thumbnail"></div>
           <span class="music-title">Smooth Jazz</span>
-          <span class="playlist-expand-button glyphicon glyphicon-chevron-right"></span>
+          <span class="music-item-button glyphicon glyphicon-chevron-right"></span>
         </li>
         <li class="music-item">
           <div class="music-cover-thumbnail"></div>
           <span class="music-title">Electronic</span>
-          <span class="playlist-expand-button glyphicon glyphicon-chevron-right"></span>
+          <span class="music-item-button glyphicon glyphicon-chevron-right"></span>
         </li>
         <li class="music-item">
           <div class="music-cover-thumbnail"></div>
           <span class="music-title">Chill</span>
-          <span class="playlist-expand-button glyphicon glyphicon-chevron-right"></span>
+          <span class="music-item-button glyphicon glyphicon-chevron-right"></span>
         </li>
         <li class="music-item">
           <div class="music-cover-thumbnail"></div>
           <span class="music-title">Studying</span>
-          <span class="playlist-expand-button glyphicon glyphicon-chevron-right"></span>
+          <span class="music-item-button glyphicon glyphicon-chevron-right"></span>
         </li>
         <li class="music-item">
           <div class="music-cover-thumbnail"></div>
           <span class="music-title">2000's Mix</span>
-          <span class="playlist-expand-button glyphicon glyphicon-chevron-right"></span>
+          <span class="music-item-button glyphicon glyphicon-chevron-right"></span>
         </li>
         <li class="music-item">
           <div class="music-cover-thumbnail"></div>
           <span class="music-title">Favs</span>
-          <span class="playlist-expand-button glyphicon glyphicon-chevron-right"></span>
+          <span class="music-item-button glyphicon glyphicon-chevron-right"></span>
         </li>
         <li class="music-item">
           <div class="music-cover-thumbnail"></div>
           <span class="music-title">Relaxing Poolside</span>
-          <span class="playlist-expand-button glyphicon glyphicon-chevron-right"></span>
+          <span class="music-item-button glyphicon glyphicon-chevron-right"></span>
         </li>
       </ul>
     </div>
-  </div>
 
   <script src='music-data.js'></script>
   <script src='music-app.js'></script>
