Added styles for song items and helper functions to create title-subtitles

--- a/playlist.html
+++ b/playlist.html
@@ -32,10 +32,20 @@
         <span class="glyphicon glyphicon-plus"></span>
         <span>Playlist</span>
       </button>
-      <ul id="playlist-list" class="music-item-list">
+      <ul class="music-item-list">
         <li class="music-item">
           <div class="music-cover-thumbnail"></div>
-          <span class="music-title">90's Mega Mix</span>
+          <div class='music-title-subtitle'>
+            <span class="music-title">90's Mega Mix</span>
+          </div>
+          <span class="music-item-button glyphicon glyphicon-chevron-right"></span>
+        </li>
+        <li class="music-item">
+          <div class="music-cover-thumbnail"></div>
+          <div class='music-title-subtitle'>
+            <span class="music-title">90's Mega Mix</span>
+            <span class="music-subtitle">subtitle</span>
+          </div>
           <span class="music-item-button glyphicon glyphicon-chevron-right"></span>
         </li>
       </ul>
