New buttons for music items

--- a/playlist.html
+++ b/playlist.html
@@ -46,7 +46,7 @@
             <span class="music-title">90's Mega Mix</span>
             <span class="music-subtitle">subtitle</span>
           </div>
-          <span class="music-item-button glyphicon glyphicon-chevron-right"></span>
+          <span class="music-item-button glyphicon glyphicon-play"></span>
         </li>
       </ul>
     </div>
