Implemented playlist selection

--- a/playlist.html
+++ b/playlist.html
@@ -49,6 +49,15 @@
           <span class="music-item-button glyphicon glyphicon-play"></span>
         </li>
       </ul>
+      <div class="modal-dim modal-background"></div>
+      <div class="playlist-selection">
+        <div class="playlist-selection-title">
+          <span>Choose playlist</span>
+          <span class="playlist-selection-cancel glyphicon glyphicon-remove"></span>
+        </div>
+        <span class="playlist-selection-item">hello</span>
+        <span class="playlist-selection-item">hello</span>
+      </div>
     </div>
 
   <script src='music-data.js'></script>
