Added non functional sort buttons

--- a/playlist.html
+++ b/playlist.html
@@ -28,11 +28,22 @@
     </header>
 
     <div id="content-view">
-      <button id="new-playlist-button" class='purple-button'>
-        <span class="glyphicon glyphicon-plus"></span>
-        <span>Playlist</span>
-      </button>
+
       <ul class="music-item-list">
+        <button id="new-playlist-button" class='purple-button'>
+          <span class="glyphicon glyphicon-plus"></span>
+          <span>Playlist</span>
+        </button>
+        <div class="sort-method-button-bar">
+          <button class='purple-button sort-method-button'>
+            <span class="glyphicon glyphicon-plus"></span>
+            <span>Playlist</span>
+          </button>
+          <button class='purple-button sort-method-button'>
+            <span class="glyphicon glyphicon-plus"></span>
+            <span>Playlist</span>
+          </button>
+        </div>
         <li class="music-item">
           <div class="music-cover-thumbnail"></div>
           <div class='music-title-subtitle'>
