Clicking a playlist now shows all the songs it contains

--- a/playlist.html
+++ b/playlist.html
@@ -34,12 +34,12 @@
           <span class="glyphicon glyphicon-plus"></span>
           <span>Playlist</span>
         </button>
-        <div class="sort-method-button-bar">
-          <button class='purple-button sort-method-button'>
+        <div class="content-view-button-bar">
+          <button class='purple-button content-view-button'>
             <span class="glyphicon glyphicon-plus"></span>
             <span>Playlist</span>
           </button>
-          <button class='purple-button sort-method-button'>
+          <button class='purple-button content-view-button'>
             <span class="glyphicon glyphicon-plus"></span>
             <span>Playlist</span>
           </button>
