Added search tab and working search bar

--- a/playlist.html
+++ b/playlist.html
@@ -34,12 +34,12 @@
           <span class="glyphicon glyphicon-plus"></span>
           <span>Playlist</span>
         </button>
-        <div class="content-view-button-bar">
-          <button class='purple-button content-view-button'>
+        <div class="content-view-flex-row">
+          <button class='purple-button content-view-flex-row-item'>
             <span class="glyphicon glyphicon-plus"></span>
             <span>Playlist</span>
           </button>
-          <button class='purple-button content-view-button'>
+          <button class='purple-button content-view-flex-row-item'>
             <span class="glyphicon glyphicon-plus"></span>
             <span>Playlist</span>
           </button>
