Declare character encoding

--- a/playlist.html
+++ b/playlist.html
@@ -5,6 +5,7 @@
   <!-- Bootstrap core CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="playlist.css">
+  <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, height=device-height">
 </head>
 <body>
