--- a/playlist.html
+++ b/playlist.html
@@ -72,7 +72,10 @@
     </div>
      -->
   </div>
-
+  <script
+    src="https://code.jquery.com/jquery-3.1.1.min.js"
+    integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+    crossorigin="anonymous"></script>
   <script src='music-data.js'></script>
   <script src='music-app.js'></script>
 </body>
