--- a/playlist.html
+++ b/playlist.html
@@ -76,6 +76,8 @@
     src="https://code.jquery.com/jquery-3.1.1.min.js"
     integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
     crossorigin="anonymous"></script>
+  <script src='/socket.io/socket.io.js'></script>
   <script src='music-app.js'></script>
+
 </body>
 </html>
